<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Triangle Game</string>
    <string name="title_section1">Game</string>
    <string name="title_section2">Guide</string>
    <string name="title_section3">About</string>
    <string name="action_settings">Settings</string>
    <string name="Welcome">Welcome to the Triangle App</string>
    <string name="select_option">Please select your option:</string>
    <string name="e_tri">An Equilateral triangle has 3 equal sides. </string>
    <string name="s_tri">A Scalene triangle has all unequal sides. </string>
    <string name="i_tri">An Isoseceles has 2 equal sides.</string>
    <string name="t_tri">Types Of Triangles</string>
    <string name="enter_text">Please enter three sides of the triangle below (whole number only): </string>
    <string name="editText1">Value One</string>
    <string name="side_1">Bottom Side: </string>
    <string name="side_2">Left Side:</string>
    <string name="side_3">Right Side: </string>
    <string name="title_activity_guide">Guide</string>
    <string name="guide_guide">Tri angle Types:</string>
    <string name="title_activity_game">Game</string>
    <string name="intro_game">Please type three sides of the triangle in fileds below and click send </string>
    <string name="game_btn">Send</string>
    <string name="dev_title">Developed by Team One</string>
    <string name="dev_credits">Team One Members</string>
    <string name="member1">Brandon Clark</string>
    <string name="member2">Hooman Majidzadeh Rezvani</string>
    <string name="member3">Christie Phan</string>
    <string name="member4">Panktiben Soni</string>
    <string name="type_hint">Type a number</string>
    <string name="generate">Generate</string>
    <string name="clear">Clear</string>
    <string name="you_enter">You Entered: </string>
    <string name="display">Display</string>
     
</resources>
