<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >    
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="134dp"
            android:layout_height="188dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/ic_launcher" android:contentDescription="@string/app_name"/>

        <TextView
            android:id="@+id/TextView01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/TextView02"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dev_title"
            android:textAlignment="center"
            android:textSize="15sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <TextView
            android:id="@+id/TextView03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/dev_credits"
            android:textAlignment="center"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/TextView04"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/member1"
            android:textAlignment="center"
            tools:ignore="SmallSp" />

        <TextView
            android:id="@+id/TextView05"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/member2"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/TextView06"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/member3"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/TextView07"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/member4"
            android:textAlignment="center" />
    </LinearLayout>
</ScrollView>