<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   <LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/enter_text" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/side_1" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_hint"
        android:inputType="number" >

        <requestFocus />
    </EditText>

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side_2" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_hint"
        android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="20dp" />
    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/type_hint"
        android:text="@string/side_3" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/type_hint"
        android:inputType="number" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:gravity="end"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/generate"
            style="?android:attr/buttonStyle" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/clear" 
            style="?android:attr/buttonStyle"/>
    </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="25dp" />
    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_enter" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />
    <TextView
        android:id="@+id/textView6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical|center"
        android:gravity="center_vertical|center_horizontal|center"
        android:text=""
        android:textAlignment="center" />

    <ImageView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center|center_vertical"
        android:contentDescription="@string/display"
        android:gravity="center"
        android:maxHeight="100dp"
        android:maxWidth="100dp" />
 
</LinearLayout>
</ScrollView>