<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
   <LinearLayout
	    android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:orientation="vertical" >
        <TextView
            android:id="@+id/t_tri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/t_tri"
            android:textSize="15sp"
            android:textStyle="bold" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/e_triangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/e_tri"
            android:src="@drawable/e_triangle" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/e_tri" />
        

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/i_triangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/i_tri"
            android:src="@drawable/i_triangle" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/i_tri" />
        

        <Space
            android:layout_width="match_parent"
            android:layout_height="50dp" />

        <ImageView
            android:id="@+id/s_triangle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/s_tri"
            android:src="@drawable/s_triangle" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/s_tri" />
    </LinearLayout>
    </ScrollView>